<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_movies" />

    <TextView
        style="@style/activity_text_view"
        android:id="@+id/tv_empty_favourite_list_message"
        android:text="@string/empty_favourite_list_message" />

    <TextView
        style="@style/activity_text_view"
        android:id="@+id/tv_movie_request_fetch_error"
        android:text="@string/response_fetch_error_message" />

    <TextView
        style="@style/activity_text_view"
        android:id="@+id/tv_movie_request_network_error"
        android:text="@string/response_network_error_message" />

    <ProgressBar
        android:layout_width="@dimen/progress_bar_width_and_height"
        android:layout_height="@dimen/progress_bar_width_and_height"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/pb_movie_request_loading"
        android:visibility="invisible"/>

</merge>
